# gx-ariana

./: README.md  package-lock.json
.githooks/: pre-commit
cli/: .gitignore  ARCHITECTURE.md  Cargo.toml  Cross.toml  LICENCE.txt  package.py
cli/ariana-npm/: LICENCE.txt  ariana.js  package.json
cli/ariana-py/: .gitignore  LICENCE.txt  README.md  main.py  pyproject.toml  setup.py
cli/ariana-py/ariana/: __init__.py
cli/scripts/: build_linux.sh  build_macos.sh  build_win.ps1
cli/src/: auth.rs  collector.rs  config.rs  instrumentation.rs  main.rs  processor.rs  subprocess_stdout_watcher.rs  trace_watcher.rs  utils.rs
dedale-ariana/landing/: AGENT.md
dedale-ariana/server/: AGENT.md
extensions/cli/: AGENT.md
extensions/vscode/: .gitignore  .vscodeignore  AGENT.md  LICENCE.txt  README.md  esbuild.js  package-lock.json  package.json  package_openvsx.py  tsconfig.json  tsconfig.ts-prune.json
extensions/vscode/.agent/: timeline_computation_flow.md
extensions/vscode/.agent/features/: 2025-04-07_trace_ui_enhancements.md  2025-04-07_vault_management.md
extensions/vscode/.agent/refactors/: 2025-04-07_extension_refactoring.md
extensions/vscode/resources/: color_vars.txt
extensions/vscode/scripts/: generate_color_component.py
extensions/vscode/src/: config.ts  extension.ts  projectAnalyzer.ts  urilHelpers.ts
extensions/vscode/src/bindings/: BatchTracesDetailsRequest.ts  CodeInstrumentationBatchResponse.ts  CodeInstrumentationResponse.ts  EcmaImportStyle.ts  GenerateRunCommandsRequest.ts  IndirectParent.ts  LightTrace.ts  Position.ts  PushTracesRequest.ts  Range.ts  RunCommands.ts  SortedList.ts  TimeRangeRequest.ts  Timestamp.ts  Trace.ts  TraceType.ts  TracesUnderPathRequest.ts  VaultPublicData.ts
extensions/vscode/src/highlighting/: HighlightingToggle.ts  decorations.ts  index.ts  regions.ts
extensions/vscode/src/installation/: cliManager.ts  index.ts
extensions/vscode/src/panels/: ArianaPanel.ts  Panel.ts  SidebarPanel.ts  TimelinePanel.ts  TracesPanel.ts  VaultDetailPanelProvider.ts
extensions/vscode/src/services/: ApiClient.ts  HotReloadService.ts  RunCommandsService.ts  TimelineService.ts  (+2 more)
extensions/vscode/webview-ui/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+88 files in other folders)
