[package]
name = "ariana"
version = "0.2.4"
edition = "2021"

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.31"
indicatif = "0.17"
walkdir = "2.5.0"
async-recursion = "1.0"
fs_extra = "1.3.0"
clap = { version = "4.5.28", features = ["derive"] }
ariana-server = { path = "../../dedale-ariana/server" }
ignore = "0.4"
sha2 = "0.10"
regex = "1.10.3"
dirs = "5.0.1"
sysinfo = "0.33.1"
anyhow = { version = "1.0.80", features = ["backtrace"] }
parking_lot = "0.12.3"
crossbeam-channel = "0.5.14"
ctrlc = "3.4.5"

[dev-dependencies]
tempfile = "3.16.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[profile.dev]
debug = true
