[package]
name = "ariana"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
ctrlc = "3.4.5"
dirs = "6.0.0"
fs_extra = "1.3.0"
ignore = "0.4.23"
indicatif = "0.17.11"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = { version = "0.12.15", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
tokio = { version = "1.44.1", features = ["full"] }
ariana-server = { path = "./server" }
zip = "2.5.0"
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.31"
async-recursion = "1.1.1"

# [target.x86_64-unknown-linux-gnu.dependencies]
# openssl = { version = "0.10.59", features = ["vendored"] }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[profile.dev]
debug = true
